# DataManager

./: .env  .env.example  BarProcessingService_README.md  SYSTEM.md  adaptive_example.py  build-postgres.bat  docker-compose.yml  init-multiple-dbs.sh  more_tests.txt  pytest.ini  requirements.txt  test_output.txt
backend/: Dockerfile  __init__.py  (+4 more)
backend/services/BarProcessingService/: BarProcessingService.py  README.md  _bar_processor.cp312-win_amd64.pyd  adaptive_example.py  bar_calculator_wrapper.py  bar_processing_service.py  example.py  pyproject.toml  setup.py  test_bar_processing_service.py  test_cpp_extension.py
backend/services/BarProcessingService/bar_processor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/services/BarProcessingService/components/: BarCalculator.py
backend/services/BarProcessingService/cpp/: README.md  TIMEFRAME_PRESERVATION.md  bar_calculator.cpp  bar_calculator.h  bar_calculator_module.cpp  bar_params.h  bar_result.cpp  bar_result.h
backend/services/BarProcessingService/cpp/calculators/: base_calculator.h  entropy_bar_calculator.cpp  entropy_bar_calculator.h  tick_bar_calculator.cpp  tick_bar_calculator.h  time_bar_calculator.cpp  time_bar_calculator.h  volume_bar_calculator.cpp  volume_bar_calculator.h
backend/services/BarProcessingService/cpp/utils/: adaptive_threshold_calculator.cpp  adaptive_threshold_calculator.h  entropy_utils.cpp  entropy_utils.h
backend/services/BarProcessingService/utils/: README.md  __init__.py  bar_types.py  bar_types_cy.cp311-win_amd64.pyd  bar_types_cy.cpp  bar_types_cy.pyx  data_utils.py
(+36 files in other folders)
